fix overflow and add scrollbar effects

--- a/_sass/minima/_moon.scss
+++ b/_sass/minima/_moon.scss
@@ -2,7 +2,6 @@ $size: 70vmin;
 
 .ground {
   width: 100%;
-  overflow: hidden;
   margin: -1px;
   transform: scale(1.02, 1.5);
 }
